# tetra-src

./: README.md
gazebo_sim_pkg/: CMakeLists.txt  package.xml
gazebo_sim_pkg/config/: .desktop  costmap_common_params.yaml  default_planner_mppi.yaml  default_planner_pp.yaml  default_planner_rpp.yaml  default_planner_rpp_rrt.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_flex_params_mppi.yaml  move_base_flex_params_pp.yaml  move_base_flex_params_rpp.yaml  move_base_flex_params_rpp_rrt.yaml  move_base_params.yaml  mppi_controller_params.yaml  multi_robot_control copy.yaml  multi_robot_control.yaml  my_robot_control.yaml  navfn_global_planner_params_mbf.yaml  pure_pursuit_local_planner_params.yaml  pure_pursuit_local_planner_params_test.yaml  recovery_behaviors.yaml  regulated_pure_pursuit_controller.yaml  regulated_pure_pursuit_controller_test.yaml  rrt_global_planner.yaml
gazebo_sim_pkg/config/original/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
gazebo_sim_pkg/config/test/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_flex_params.yaml  navfn_global_planner_params.yaml
gazebo_sim_pkg/launch/: amcl.launch  amcl_orig.launch  amcl_test.launch  move_base.launch  move_base_flex_mppi.launch  move_base_flex_pp.launch  move_base_flex_rpp.launch  move_base_flex_rpp_rrt.launch  multi_sim.launch  multi_spawn.launch  my_robot_web.launch  my_sim.launch  navigation.launch  navigation_mppi.launch  navigation_pp.launch  navigation_pp1.launch  navigation_rpp.launch  navigation_rpp_rrt.launch  rviz_display.launch  scout_navigation.launch  slam.launch  slam_map_save.launch
gazebo_sim_pkg/maps/: map1.yaml  map22.pgm  map22.yaml  my_robot_map.pgm  my_robot_map.yaml  test_map.pgm
gazebo_sim_pkg/rviz/: multi_display.rviz  rviz.rviz
gazebo_sim_pkg/src/: goal_relay.py  keyboard_twist_controller.cpp
gazebo_sim_pkg/urdf/: multi_robot.urdf.xacro  my_robot.urdf copy.xacro  my_robot.urdf.xacro
gazebo_sim_pkg/urdf/test/: lidar.xacro  robot.urdf.xacro
gazebo_sim_pkg/worlds/: my_robot_with_camera.world
gazebo_sim_pkg/worlds/Untitled/: model.sdf
gazebo_sim_pkg/worlds/embd/: model.sdf
gazebo_sim_pkg/worlds/my_wall/: model.sdf
gazebo_sim_pkg/worlds/test_map/: model.sdf
iahrs_driver-master/src/: iahrs_driver.cpp
move_base_flex-melodic/mbf_abstract_nav/src/: abstract_navigation_server.cpp
my_robot_pkg/: CMakeLists.txt  package.xml
navi_goals/config/: waypoints.yaml
navi_goals/launch/: navi_goals.launch
pure_pursuit/: CMakeLists.txt  package.xml  pure_pursuit_plugin.xml  pure_pursuit_plugin1.xml
pure_pursuit/cfg/: PurePursuitPlanner.cfg
pure_pursuit/include/pure_pursuit_local_planner/: join_costmap origin.h  join_costmap.h  pure_pursuit_planner.h  transform_global_plan.h  utils.h
pure_pursuit/src/: join_costmap  pure_pursuit_planner  pure_pursuit_planner origin  pure_pursuit_planner.cpp  transform_global_plan  utils
regulated_pure_pursuit_controller/: CMakeLists.txt  LICENSE  README.md  package.xml
regulated_pure_pursuit_controller/cfg/: RegulatedPurePursuit.cfg
regulated_pure_pursuit_controller/include/regulated_pure_pursuit_controller/: collision_checker.hpp  geometry_utils.h  parameter_handler.hpp  path_handler.hpp  regulated_pure_pursuit_controller.hpp  regulation_functions.hpp
regulated_pure_pursuit_controller/params/: regulated_pure_pursuit_controller.yaml
regulated_pure_pursuit_controller/src/: collision_checker copy  collision_checker.cpp  parameter_handler copy  parameter_handler.cpp  path_handler.cpp  regulated_pure_pursuit_controller copy  regulated_pure_pursuit_controller.cpp
robot_pose_saver/: CMakeLists.txt  package.xml  robot_positions.txt
robot_pose_saver/src/: robot_pose_saver.cpp
robot_pose_saver/srv/: SavePose.srv
rrt-global-planner/include/: 2d_space.hpp  math_funcs.hpp  rrt.hpp  visualization.hpp
rrt-global-planner/src/: rrt.cpp
rs_gazebo_sim/: CMakeLists.txt  package.xml
tetraDS/: package.xml
tetraDS/cfg/: tetra.cfg
tetraDS/src/: tetraDS.cpp
tetraDS_2dnav/: package.xml  view_navigation.rviz
tetraDS_2dnav/bundle/: table_1.xml  table_1_2.xml
tetraDS_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  scan_filter.yaml  teb_local_planner_params.yaml
tetraDS_2dnav/launch/: amcl.launch.xml  move_base_tetra.launch  teb_move_base.launch  tetra_configuration.launch
tetraDS_2dnav/odom_nav_config/: costmap_common_params.yaml
tetraDS_TCP/: package.xml
tetraDS_TCP/src/: tetraDS_TCP.cpp
tetraDS_description/launch/: display.launch  gazebo.launch
tetraDS_description/urdf/tetraDS/: base.urdf.xacro  tetraDS.xacro
tetraDS_interface/src/: power_module.c  power_module.h  tetraDS_interface.cpp
tetraDS_service/src/: tetraDS_service.cpp
web_test/: 웹페이지 순서
web_test/html/: index.html  mapping.html  mapping.js  robot_control (copy).js  robot_control.js  test_canvas.html
web_test/html_tetra/: index.html  robot_control_TETRA.js
