<package>
  <name>pure_pursuit_local_planner</name>
  <version>0.0.1</version>
  <description>The pure_pursuit_local_planner package</description>

  <maintainer email="unicornfarm@todo.todo">unicornfarm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>mbf_costmap_core</build_depend>
  <build_depend>mbf_msgs</build_depend>



  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>mbf_costmap_core</run_depend>
  <run_depend>mbf_msgs</run_depend>
  
  <export><nav_core plugin="${prefix}/pure_pursuit_plugin.xml"/></export>
</package>
